wrap args with arraylist to allow adding new elements in startPostmaster()